--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,11 @@
 @layer components {
     .typesCousine {
         @apply cursor-pointer shadow-md items-center pb-1 text-center justify-items-center px-4 hover:text-white hover:shadow-xl hover:scale-110 transition transform duration-200 ease-out active:scale-90 rounded-lg
+    },
+    .anchorLink {
+        @apply text-xs text-gray-600 font-sans
+    },
+    .footTag {
+        @apply flex flex-col items-start my-10 text-sm flex-wrap
     }
 }
